--- a/src/hooks/useActiveDescendantListFocus/__stories__/useActiveDescendantListFocus.stories.mdx
+++ b/src/hooks/useActiveDescendantListFocus/__stories__/useActiveDescendantListFocus.stories.mdx
@@ -1,14 +1,14 @@
-import { useRef, useCallback } from "react";
+import { useCallback, useRef } from "react";
 import cx from "classnames";
 import { Flex, Search } from "../../../components";
-import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
+import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import useActiveDescendantListFocus from "../index";
 import UseActiveDescendantListFocus from "./hooksDummyComponents/UseActiveDescendantListFocus";
 import { FunctionArgument, FunctionArguments, UnstyledList, UnstyledListItem } from "../../../storybook";
-import styles from "./useActiveDescendantListFocus.module.scss";
 import { overviewInteractionSuite } from "../__tests__/useActiveDescendantListFocus.interactions";
+import styles from "./useActiveDescendantListFocus.module.scss";
 
-<Meta title="Hooks/use Active Descendant List Focus" component={UseActiveDescendantListFocus} />
+<Meta title="Hooks/useActiveDescendantListFocus" component={UseActiveDescendantListFocus} />
 
 # useActiveDescendantListFocus
 
