--- a/src/components/Modal/__stories__/modal.stories.mdx
+++ b/src/components/Modal/__stories__/modal.stories.mdx
@@ -252,7 +252,7 @@ Use the ModalHeader component to display a Header with an icon
   </Story>
 </Canvas>
 
-### Alert Modal (Modal)
+### Alert Modal
 
 Use the `alertDialog` boolean prop in order to allow closing the modal only by the close buttons and not by ESC or by
 clicking outside. Use this variant in case of sensitive or important messages, and in modals that requires data from the user, such as forms.
