Small fixes to Modal stories

--- a/src/components/Modal/__stories__/modal.stories.mdx
+++ b/src/components/Modal/__stories__/modal.stories.mdx
@@ -108,8 +108,8 @@ Use modal for short and non-frequent tasks. For common tasks consider using the 
 />
 
 <Tip>
-  Set `alertDialog` to `true` in order to allow closing the modal only by the close buttons and not by ESC or by
-  clicking outside. <Link>Learn more</Link>
+  Set <code>alertDialog</code> to <code>true</code> in order to allow closing the modal only by the close buttons and
+  not by ESC or by clicking outside.
 </Tip>
 <Tip>
   If you wish to create a popover positioned next to other components, like customized menus, check out our Dialog
@@ -255,7 +255,7 @@ Use the ModalHeader component to display a Header with an icon
 
 ### Alert Modal
 
-Use the `alertDialog` boolean prop in order to allow closing the modal only by the close buttons and not by ESC or by
+Use the <code>alertDialog</code> boolean prop in order to allow closing the modal only by the close buttons and not by ESC or by
 clicking outside. Use this variant in case of sensitive or important messages, and in modals that requires data from the user, such as forms.
 
 <Canvas>
