--- a/src/components/Modal/__stories__/modal.stories.mdx
+++ b/src/components/Modal/__stories__/modal.stories.mdx
@@ -26,10 +26,7 @@ export const modalTemplate = ({ onClose, ...modalProps }) => {
   // Control if modal is display or hidden
   const [show, setShow] = useState(false);
   const openModalButtonRef = useRef(null);
-  const closeModal = useCallback(() => {
-    console.log("### closeModal");
-    setShow(false);
-  }, []);
+  const closeModal = useCallback(() => setShow(false), []);
   // Internal helper method for creating basic button which change the show state to true in order to display the modal
   // This method is not part of our external API and not required for creating functional modal component
   const openModalButton = useHelperOpenModalButton({ title: modalProps.title, setShow, openModalButtonRef });
